--- a/server/pom.xml
+++ b/server/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>3.7.1</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
