updated config properties list

--- a/server/src/main/resources/app.properties
+++ b/server/src/main/resources/app.properties
@@ -4,7 +4,7 @@ api.retrylimit.cutoff=5
 api.initialfromtimestamp=-1
 api.initialfromtimestampadvancewindow=5
 
-websocket.port={{websocket port}}
+http.port={{http port}}
 
 data.directory={{directory path to store files locally}}
 data.delimiter=,
